feat: 일정 주기마다 Version 정보를 출력하는 기능을 SimpleJob 에 구현